refactor: replace manual JSON tree building with typed manifest POJOs
- Create 16 Java records in generation/domain/model/manifest/ annotated
  with @JsonNaming(SnakeCaseStrategy) to mirror semantic-manifest-schema.json
- Add ManifestMapper to convert extraction domain models → typed manifest POJOs
- Remove SemanticManifestValidator — schema conformance is now guaranteed
  at compile time by the Java type system + Jackson serialization
- Delete 330+ lines of manual ObjectNode/ArrayNode construction from
  SynthesizeSpecAction
- Add ManifestPojoSchemaTest that validates serialized manifest against
  the schema at test time
- Update PRD.md and gap-analysis.md to reflect the new approach